<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/User_profile"
        android:icon="@drawable/usrprofile"
        android:title="@string/profile" />
    <item
        android:id="@+id/Currency"
        android:icon="@drawable/currency"
        android:title="@string/currency" />
    <item
        android:id="@+id/emergency"
        android:icon="@drawable/emergency"
        android:title="@string/Emergency" />
    <item
        android:id="@+id/treatment"
        android:icon="@drawable/medical"
        android:title="@string/treatment" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
