<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/User_profile"
            android:icon="@drawable/usrprofile"
            android:title="@string/profile" />
        <item
            android:id="@+id/Currency"
            android:icon="@drawable/currency"
            android:title="@string/currency" />
        <item
            android:id="@+id/emergency"
            android:icon="@drawable/emergency"
            android:title="@string/Emergency" />
        <item
            android:id="@+id/treatment"
            android:icon="@drawable/medical"
            android:title="@string/treatment" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>


    <item
        android:id="@+id/logOut"
        android:icon="@drawable/logout"
        android:title="Logout"

        />

</menu>
