<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <VideoView
        android:id="@+id/videoV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/transparen_bg"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="@string/Name_input"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/ligtgray"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_margin="15dp"
            android:background="@drawable/transparen_bg"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="@string/Input_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/ligtgray"
            android:textColorHint="@color/colorPrimary" />


        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editEmail"
            android:layout_margin="15dp"
            android:background="@drawable/transparen_bg"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:hint="@string/Number_input"
            android:inputType="text|number"
            android:padding="10dp"
            android:textColor="@color/ligtgray"
            android:textColorHint="@color/colorPrimary" />


        <EditText
            android:id="@+id/editTextpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhoneNumber"
            android:layout_margin="15dp"
            android:background="@drawable/transparen_bg"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/pass_input"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/ligtgray"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/editTextConPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextpass"
            android:layout_margin="15dp"
            android:background="@drawable/transparen_bg"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/con_pass_input"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/ligtgray"
            android:textColorHint="@color/colorPrimary" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_below="@+id/editTextConPass"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/green_button"
            android:text="@string/Sign_up"
            android:textSize="10dp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/editEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>