<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <GridLayout
        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="8"
        android:layout_gravity="center"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="14dp"
        >
<!---colum 1 -->
        <android.support.v7.widget.CardView
            android:layout_height="190dp"
            android:layout_width="160dp"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="loc"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/circle_purple"
                    android:src="@drawable/map"
                    android:padding="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/About_loc"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ligtgray"
                    android:layout_margin="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/About_loc"
                    android:padding="5dp"
                    android:textColor="@color/Darkergray"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_height="190dp"
            android:layout_width="160dp"
            android:layout_margin="10dp"
            android:focusable="true"
            android:clickable="true"
            android:onClick="todolist">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/circle_blue"
                    android:src="@drawable/activities"
                    android:padding="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/Things_to_do"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ligtgray"
                    android:layout_margin="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Things_to_do"
                    android:padding="5dp"
                    android:textColor="@color/Darkergray"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!---colum 2 -->

        <android.support.v7.widget.CardView
            android:layout_height="190dp"
            android:layout_width="160dp"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="DayPlan"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/circle_yellow"
                    android:src="@drawable/day_plan"
                    android:padding="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/Day_plan"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ligtgray"
                    android:layout_margin="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/About_loc"
                    android:padding="5dp"
                    android:textColor="@color/Darkergray"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="190dp"
            android:layout_width="160dp"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="food">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/circle_green"
                    android:src="@drawable/food"
                    android:padding="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/Food_drink"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ligtgray"
                    android:layout_margin="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Food_drink"
                    android:padding="5dp"
                    android:textColor="@color/Darkergray"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!---colum 3 -->

        <android.support.v7.widget.CardView
            android:layout_height="190dp"
            android:layout_width="160dp"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/circle_sky"
                    android:src="@drawable/hotel"
                    android:padding="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/Hotel_name_info"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ligtgray"
                    android:layout_margin="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Hotel_name_info"
                    android:padding="5dp"
                    android:textColor="@color/Darkergray"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_height="190dp"
            android:layout_width="160dp"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/circle_brown"
                    android:src="@drawable/bus_car"
                    android:padding="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/Food_drink"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ligtgray"
                    android:layout_margin="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Food_drink"
                    android:padding="5dp"
                    android:textColor="@color/Darkergray"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>



    </GridLayout>




</ScrollView>